# Robotics-project-2022

./: Instructions  README.md
project1/: CMakeLists.txt  Instructions.txt
project1/cfg/: odomParameters.cfg  velParameters.cfg
project1/launch/: project1.launch
project1/src/: client.cpp  control.cpp  odometry.cpp  velocity.cpp
project1/srv/: ResetPose.srv
project2/: CMakeLists.txt  Instructions2.txt  package.xml
project2/config/: amcl.launch.xml  ekf_loc.yaml  gmapping.launch.xml
project2/launch/: localization.launch  mapping.launch  scan_merger.launch
project2/maps/: map.pgm
project2/rviz/: localization_rviz_config.rviz  mapping_rviz_config.rviz
project2/scripts/: client.py  mapsaver.py
project2/src/: odom_tf.cpp
project2/srv/: SaveTrajectory.srv
src/project1/: CMakeLists.txt  package.xml
src/project1/cfg/: odomParameters.cfg  parameters.cfg  parameters2.cfg  velParameters.cfg
src/project1/launch/: project1.launch
src/project1/src/: client.cpp  control.cpp  odometry.cpp  tf2bag.cpp  tf2broadcaster.cpp  velocity.cpp
src/project1/srv/: Reset.srv
